# memobelc-api

./: .env.example  .gitignore  .pylintrc  DOKPLOY_SETUP.md  Dockerfile  EXPLICACAO_DEBUG_SCHEDULER.md  PRODUCTION.md  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt  run.py
src/app/: __init__.py  config.py
src/app/controllers/: auth_controller.py  books_controller.py  card_controller.py  chat_controller.py  classroom_controller.py  collections_controller.py  decks_controller.py  invite_controller.py  masterdecks_controller.py  notification_controller.py  payment_controller.py  protected_controller.py  user_progress_controller.py  user_streak_controller.py  videos_controller.py
src/app/middlewares/: token_required.py
src/app/models/: book_model.py  card_model.py  chat_model.py  classroom_model.py  collection_model.py  deck_model.py  invite_model.py  masterdeck_model.py  push_notification_model.py  user_model.py  user_progress_model.py  user_streak_model.py  video_model.py
src/app/proto/: auth.proto  card.proto
src/app/provider/: stripe.py
src/app/routes/: routes.py
src/app/services/: auth_service.py  books_service.py  card_service.py  chat_service.py  classroom_service.py  collections_service.py  deck_service.py  invite_service.py  masterdeck_service.py  notification_service.py  payment_service.py  (+4 more)
src/test/: conftest.py  test_auth.py  test_books.py  test_cards.py  test_chat.py  test_classroom.py  test_collections.py  test_decks.py  test_notifications.py  test_payment.py  test_progress.py  test_streak.py  test_videos.py
(+6 files in other folders)
