[tool.poetry]
name = "memobelc-api"
version = "0.1.0"
description = ""
authors = ["Cleby Francisco <cfs7@softex.cin.ufpe.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bcrypt = "4.2.0"
betterproto = "1.2.5"
black = "24.8.0"
blinker = "1.8.2"
click = "8.1.7"
colorama = "0.4.6"
dnspython = "2.6.1"
flask = "3.0.3"
flask-mail = "0.10.0"
flask-pymongo = "2.3.0"
flask-swagger-ui = "4.11.1"
grpclib = "0.4.7"
h2 = "4.1.0"
hpack = "4.0.0"
hyperframe = "6.0.1"
iniconfig = "2.0.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
markupsafe = "2.1.5"
multidict = "6.1.0"
mypy-extensions = "1.0.0"
packaging = "24.1"
pathspec = "0.12.1"
platformdirs = "4.3.6"
pluggy = "1.5.0"
protobuf = "5.28.1"
pyjwt = "2.9.0"
pymongo = "4.8.0"
pytest = "8.3.3"
python-dotenv = "1.0.1"
setuptools = "72.1.0"
stringcase = "1.2.0"
uuid = "1.30"
uuid7 = "0.1.0"
werkzeug = "3.0.4"
wheel = "0.43.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
